--- a/src/scss/templates/gallery-app.scss
+++ b/src/scss/templates/gallery-app.scss
@@ -8,7 +8,7 @@
     column-gap: 50px;
     box-sizing: border-box;
     padding: 70px 70px 70px 70px;
-    box-shadow: rgba(0, 0, 0, 0.15) 0px 2px 8px;
+    @include box-shadow;
 
 
     @media ( max-width: 950px ) {
@@ -21,20 +21,56 @@
 
     .gallery-app-image {
         grid-column: 1;
-        @include flex-start-column;
+        @include flex-center-column;
         width: 100%;
         height: 100%;
-        justify-content: flex-start;
 
         img {
             width: auto;
             max-height: 600px;
         }
 
-
         @media ( max-width: 950px ) {
             grid-column: 1;
             grid-row: 1;
+        }
+
+    }
+
+    .gallery-app-upload-image {
+        width: 300px;
+        height: 500px;
+        @include box-shadow;
+        @include flex-center-center;
+
+        div {
+            width: 100%;
+            height: 100px;
+            position: relative;
+
+            input {
+                position: relative;
+                z-index: 2;
+                width: 100%;
+                height: 100%;
+                cursor: pointer;
+                opacity: 0%;
+            }
+
+            label {
+                @include flex-center-column;
+                grid-gap: 10px;
+                position: absolute;
+                z-index: 1;
+                top: 50%;
+                left: 50%;
+                transform: translate(-50%, -50%);
+
+                h5 {
+                    margin: 0px;
+                }
+
+            }
         }
 
     }
@@ -69,6 +105,7 @@
             }
         }
 
+
         .gallery-app-total {
             @include flex-end-column;
             width: 100%;
@@ -77,6 +114,7 @@
             h3 {
                 color: $orange-900;
             }
+
         }
 
     }
