--- a/static/style.css
+++ b/static/style.css
@@ -268,18 +268,15 @@ a.select-product-button,
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
-  -webkit-box-align: start;
-      -ms-flex-align: start;
-          align-items: flex-start;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
   -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
   width: 100%;
   height: 100%;
-  -webkit-box-pack: start;
-      -ms-flex-pack: start;
-          justify-content: flex-start;
 }
 .gallery-app-container .gallery-app-image img {
   width: auto;
@@ -290,6 +287,59 @@ a.select-product-button,
     grid-column: 1;
     grid-row: 1;
   }
+}
+.gallery-app-container .gallery-app-upload-image {
+  width: 300px;
+  height: 500px;
+  -webkit-box-shadow: rgba(0, 0, 0, .15) 0px 2px 8px;
+          box-shadow: rgba(0, 0, 0, .15) 0px 2px 8px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+.gallery-app-container .gallery-app-upload-image div {
+  width: 100%;
+  height: 100px;
+  position: relative;
+}
+.gallery-app-container .gallery-app-upload-image div input {
+  position: relative;
+  z-index: 2;
+  width: 100%;
+  height: 100%;
+  cursor: pointer;
+  opacity: 0%;
+}
+.gallery-app-container .gallery-app-upload-image div label {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  grid-gap: 10px;
+  position: absolute;
+  z-index: 1;
+  top: 50%;
+  left: 50%;
+  -webkit-transform: translate(-50%, -50%);
+          transform: translate(-50%, -50%);
+}
+.gallery-app-container .gallery-app-upload-image div label h5 {
+  margin: 0px;
 }
 .gallery-app-container .gallery-app-info {
   grid-column: 2;
