--- a/assets/scss/elements/dpi-level.scss
+++ b/assets/scss/elements/dpi-level.scss
@@ -1,12 +1,13 @@
 .gallery-app-image-quality {
-    @include flex-start-column;
-    grid-gap: 10px;
+    @include flex-center-column;
     margin-top: 10px;
+    width: 169px;
+    text-align: center;
 
     div {
         @include flex-start-center;
         column-gap: 1px;
-        width: 200px;
+        width: 100%;
         height: 20px;
 
         span {
