--- a/static/style.css
+++ b/static/style.css
@@ -240,15 +240,16 @@ a.select-product-button,
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
-  -webkit-box-align: start;
-      -ms-flex-align: start;
-          align-items: flex-start;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
   -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
-  grid-gap: 10px;
   margin-top: 10px;
+  width: 169px;
+  text-align: center;
 }
 .gallery-app-image-quality div {
   display: -webkit-box;
@@ -263,7 +264,7 @@ a.select-product-button,
   -webkit-column-gap: 1px;
      -moz-column-gap: 1px;
           column-gap: 1px;
-  width: 200px;
+  width: 100%;
   height: 20px;
 }
 .gallery-app-image-quality div span {
