--- a/assets/scss/templates/gallery-app.scss
+++ b/assets/scss/templates/gallery-app.scss
@@ -1,21 +1,30 @@
+#photolab-gallery-app {
+    width: 100%;
+}
+
 .gallery-app-container {
     display: grid;
     grid-template-columns: 1fr 1fr;
-    justify-items:start;
+    justify-items: start;
     align-content: center;
     width: 1300px;
+    max-width: 100%;
     min-height: 600px;
-    column-gap: 50px;
+    grid-gap: 50px;
     box-sizing: border-box;
     padding: 70px 70px 70px 70px;
     @include box-shadow;
 
+    h2 {
+        margin-top: 0px;
+    }
 
-    @media ( max-width: 950px ) {
+
+    @media ( max-width: 1050px ) {
         grid-template-columns: 1fr;
         grid-template-rows: auto auto;
         padding: 35px 35px 35px 35px;
-        column-gap: 35px;
+        grid-gap: 35px;
     }
 
 
@@ -24,11 +33,43 @@
         @include flex-center-column;
         width: 100%;
         height: 100%;
+        box-sizing: border-box;
+        position: relative;
+
+        canvas:nth-child(1) {
+            position: relative;
+            top: 0;
+            left: 0;
+            box-shadow: rgba(0, 0, 0, 0.19) 0px 10px 20px, rgba(0, 0, 0, 0.23) 0px 6px 6px;
+        }
+
+        canvas:nth-child(2),
+        canvas:nth-child(3), {
+            position: absolute;
+            top: 0;
+            left: 0;
+        }
 
         img {
-            width: auto;
-            max-width: 600px;
-            max-height: 600px;
+            width: 600px;
+            height: auto;
+            max-width: 100%;
+            box-shadow: rgba(0, 0, 0, 0.19) 0px 10px 20px, rgba(0, 0, 0, 0.23) 0px 6px 6px;
+        }
+
+        @media ( max-width: 1050px ) {
+            padding-left: 100px;
+            padding-right: 100px;
+        }
+
+        @media ( max-width: 800px ) {
+            padding-left: 50px;
+            padding-right: 50px;
+        }
+
+        @media ( max-width: 600px ) {
+            padding-left: 0px;
+            padding-right: 0px;
         }
 
         @media ( max-width: 950px ) {
@@ -85,7 +126,7 @@
         flex-direction: column;
         width: 100%;
 
-        @media ( max-width: 950px ) {
+        @media ( max-width: 1050px ) {
             grid-column: 1;
             grid-row: 2;
         }
