--- a/static/style.css
+++ b/static/style.css
@@ -248,7 +248,8 @@ a.select-product-button,
       -ms-flex-direction: column;
           flex-direction: column;
   margin-top: 10px;
-  width: 169px;
+  grid-gap: 4px;
+  width: 200px;
   text-align: center;
 }
 .gallery-app-image-quality div {
@@ -264,7 +265,6 @@ a.select-product-button,
   -webkit-column-gap: 1px;
      -moz-column-gap: 1px;
           column-gap: 1px;
-  width: 100%;
   height: 20px;
 }
 .gallery-app-image-quality div span {
@@ -290,6 +290,10 @@ a.select-product-button,
   background-color: #E3E3E3;
 }
 
+#photolab-gallery-app {
+  width: 100%;
+}
+
 .gallery-app-container {
   display: grid;
   grid-template-columns: 1fr 1fr;
@@ -297,24 +301,24 @@ a.select-product-button,
   -ms-flex-line-pack: center;
       align-content: center;
   width: 1300px;
+  max-width: 100%;
   min-height: 600px;
-  -webkit-column-gap: 50px;
-     -moz-column-gap: 50px;
-          column-gap: 50px;
+  grid-gap: 50px;
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
   padding: 70px 70px 70px 70px;
   -webkit-box-shadow: rgba(0, 0, 0, .15) 0px 2px 8px;
           box-shadow: rgba(0, 0, 0, .15) 0px 2px 8px;
 }
-@media (max-width: 950px) {
+.gallery-app-container h2 {
+  margin-top: 0px;
+}
+@media (max-width: 1050px) {
   .gallery-app-container {
     grid-template-columns: 1fr;
     grid-template-rows: auto auto;
     padding: 35px 35px 35px 35px;
-    -webkit-column-gap: 35px;
-       -moz-column-gap: 35px;
-            column-gap: 35px;
+    grid-gap: 35px;
   }
 }
 .gallery-app-container .gallery-app-image {
@@ -334,11 +338,47 @@ a.select-product-button,
           flex-direction: column;
   width: 100%;
   height: 100%;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  position: relative;
+}
+.gallery-app-container .gallery-app-image canvas:nth-child(1) {
+  position: relative;
+  top: 0;
+  left: 0;
+  -webkit-box-shadow: rgba(0, 0, 0, .19) 0px 10px 20px, rgba(0, 0, 0, .23) 0px 6px 6px;
+          box-shadow: rgba(0, 0, 0, .19) 0px 10px 20px, rgba(0, 0, 0, .23) 0px 6px 6px;
+}
+.gallery-app-container .gallery-app-image canvas:nth-child(2),
+.gallery-app-container .gallery-app-image canvas:nth-child(3) {
+  position: absolute;
+  top: 0;
+  left: 0;
 }
 .gallery-app-container .gallery-app-image img {
-  width: auto;
-  max-width: 600px;
-  max-height: 600px;
+  width: 600px;
+  height: auto;
+  max-width: 100%;
+  -webkit-box-shadow: rgba(0, 0, 0, .19) 0px 10px 20px, rgba(0, 0, 0, .23) 0px 6px 6px;
+          box-shadow: rgba(0, 0, 0, .19) 0px 10px 20px, rgba(0, 0, 0, .23) 0px 6px 6px;
+}
+@media (max-width: 1050px) {
+  .gallery-app-container .gallery-app-image {
+    padding-left: 100px;
+    padding-right: 100px;
+  }
+}
+@media (max-width: 800px) {
+  .gallery-app-container .gallery-app-image {
+    padding-left: 50px;
+    padding-right: 50px;
+  }
+}
+@media (max-width: 600px) {
+  .gallery-app-container .gallery-app-image {
+    padding-left: 0px;
+    padding-right: 0px;
+  }
 }
 @media (max-width: 950px) {
   .gallery-app-container .gallery-app-image {
@@ -416,7 +456,7 @@ a.select-product-button,
           flex-direction: column;
   width: 100%;
 }
-@media (max-width: 950px) {
+@media (max-width: 1050px) {
   .gallery-app-container .gallery-app-info {
     grid-column: 1;
     grid-row: 2;
